Added some explanitory text to index

--- a/DanceLayers/templates/index.html
+++ b/DanceLayers/templates/index.html
@@ -1,8 +1,25 @@
 <!DOCTYPE html>
 <html>
     <body>
+        <header>Hello and Welcome to Dance Layers!</header>
+        <br>
+        <br>
+        Inspired by Julie Brown's excellent solo class at The Spoonful 2016. The idea here is to explore combinations of movement that you might otherwise not do.
+        <br>
+        Play some blues, get used to each 'layer' and then add another.
+        <br>
+        They're randomly generated from a predefined list, so some of the combinations may be impossible. Just hit refresh to get a new one. Enjoy!
+        <br>
+        <br>
         Start with your {{first[0]}}: {{first[1]}}<br>
         Add {{second[0]}}: {{second[1]}}<br>
         Then add {{third[0]}}: {{third[1]}}
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        Source code available <a href="https://github.com/saoili/DanceLayers">on github</a> and contributions welcome.
     </body>
 </html>
